--- a/Book-store-Reactjs/src/components/Authentication/Login/style.css
+++ b/Book-store-Reactjs/src/components/Authentication/Login/style.css
@@ -26,7 +26,7 @@
 
 .Auth-form-title {
   text-align: center;
-  margin-bottom: 1em;
+  /* margin-bottom: 1em; */
   font-size: 24px;
   color: rgb(34, 34, 34);
   font-weight: 800;
